--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -7,7 +7,7 @@ body {
 header{
     display:flex;
     align-items:center;
-    background-color: purple; 
+    background-color: rgb(43, 61, 43); 
     color: white; 
     border-radius: 25px;
     text-align: center; 
@@ -18,7 +18,7 @@ header{
     background-color: lightgray; 
     color: black; 
     padding: 1rem; 
-    width: 90%;
+    width: 95%;
     margin-bottom: 10px;
 }
 
@@ -26,13 +26,13 @@ img {
     width: 100%; 
 }
 
-#title {
+.title {
     align-items: center;
-    background-color: darkblue; 
+    background-color: navy; 
     color: white; 
     text-align: center; 
     padding: 1rem; 
-    width: 90%; 
+    width: 95%; 
     margin-top: 10px; 
     border-radius: 25px 25px 0px 0px; 
 }
@@ -43,12 +43,12 @@ div {
 
 #content{
     margin: 0 auto; 
-    width: 400px; 
+    width: 800px; 
 }
 
 footer{
     align-items: center;
-    background-color: purple; 
+    background-color: rgb(144, 117, 50); 
     color: white; 
     text-align: center; 
     padding: 1rem; 
