--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -1,10 +1,15 @@
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1200px) {
     #content{
         margin: 0 auto; 
-        width: 1000px; 
+        width: 1300px; 
     } 
-    main {
+    section {
+        margin: 0 auto; 
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr; 
     }
-} 
+
+    div:nth-child(3) {
+        grid-column: span 2;
+    }
+}
