--- a/lesson3/styles/plan.css
+++ b/lesson3/styles/plan.css
@@ -4,6 +4,10 @@ body {
     font-family: 'Mukta', sans-serif;
 }
 
+#font {
+    font-family: 'Lora', sans-serif; 
+}
+
 main {
     background-color: blanchedalmond;
     max-width: 840px;
@@ -13,6 +17,7 @@ main {
 }
 
 header, footer {
+    font-family: 'Lora', sans-serif; 
     background-color: rgb(238, 221, 224);
     max-width: 840px;
     margin:0 auto;
@@ -37,7 +42,6 @@ nav ul {
     padding-inline-start: 0px;
     text-align: center;
 }
-
 
 nav ul li:hover {
     background-color: rgb(214, 214, 214);
