--- a/chamber/styles/site.css
+++ b/chamber/styles/site.css
@@ -74,12 +74,10 @@ h1 {
 
 #menu-open {
     display:none; 
-    border: none; 
 }
 
 #menu-close {
     display: inline; 
-    border: none; 
 }
 
 #navbar.menu-active {
@@ -95,17 +93,16 @@ h1 {
 }
 
 #ham-menu {
-    background-color: blanchedalmond;
-    font-size: 2rem;
-    border: 0; 
+    background-color: white;
+    
+
 }
 
-/* Media Query Updates for middle widths */ 
-
-@media screen and (min-width: 840px) {
+@media screen and (min-width: 640px) {
     nav ul {
-        flex-direction: row;
+        flex-direction: row; 
     }
+    
     nav ul li {
         text-align: center; 
     }
