--- a/chamber/styles/site.css
+++ b/chamber/styles/site.css
@@ -9,30 +9,60 @@ body {
 }
 
 main {
-    background-color: blanchedalmond;
     max-width: 840px;
     margin:0 auto;
-    border: 1px solid black;
     padding: 1rem; 
+}
+
+main div {
+    border: 1px solid black; 
+    padding: 1rem; 
+    margin: 1rem auto; 
+    padding-bottom: 7rem;
+}
+
+.spotlight {
+    padding: 1rem; 
+}
+
+header img{
+    margin: 1rem; 
+    height: 100px; 
+    width: 150px; 
+}
+
+#facebook, #twitter {
+    height: 60px; 
+    width: 60px; 
+}
+
+.flex {
+    display: flex; 
+    align-items: center;
+}
+
+#date {
+    align-items: center;
+    text-align: center; 
+    padding: 1rem; 
+    background-color: lightgray;
+}
+
+footer {
+    text-align: center; 
+}
+
+footer img {
+    height: auto; 
+    width: 150px;
 }
 
 header, footer {
     font-family: 'Lora', sans-serif; 
-    background-color: rgb(238, 221, 224);
     max-width: 840px;
     margin:0 auto;
-    border: 1px solid black;
     padding: 1rem; 
-    text-align: center;
-    align-items: center;
-}
-
-nav {
-    background-color: blanchedalmond;
-    max-width: 840px; 
-    margin: 0 auto; 
-    padding: 1rem;
-    border: 1px solid black; 
+    background-color: lightblue;
 }
 
 nav ul {
@@ -41,6 +71,7 @@ nav ul {
     list-style: none; 
     padding-inline-start: 0px;
     text-align: center;
+    align-items: center;
 }
 
 nav ul li:hover {
@@ -60,10 +91,6 @@ nav a {
     color: black; 
 }
 
-h1 {
-    text-align: center;
-}
-
 .active {
     background-color: pink; 
 }
@@ -74,10 +101,12 @@ h1 {
 
 #menu-open {
     display:none; 
+    border: none; 
 }
 
 #menu-close {
     display: inline; 
+    border: none; 
 }
 
 #navbar.menu-active {
@@ -93,16 +122,18 @@ h1 {
 }
 
 #ham-menu {
-    background-color: white;
-    
-
+    font-size: 5rem;
+    border: 0; 
+    color: navy; 
+    background-color: lightblue;
 }
 
-@media screen and (min-width: 640px) {
+/* Media Query Updates for middle widths */ 
+
+@media screen and (min-width: 840px) {
     nav ul {
-        flex-direction: row; 
+        flex-direction: row;
     }
-    
     nav ul li {
         text-align: center; 
     }
