--- a/chamber/styles/site.css
+++ b/chamber/styles/site.css
@@ -9,7 +9,7 @@ body {
 }
 
 main {
-    max-width: 840px;
+    max-width: 540px;
     margin:0 auto;
     padding: 1rem; 
 }
@@ -17,23 +17,32 @@ main {
 main div {
     border: 1px solid black; 
     padding: 1rem; 
-    margin: 1rem auto; 
-    padding-bottom: 7rem;
+
+}
+
+#content {
+    display: grid; 
+    border: none; 
+    row-gap: 0.5rem;
 }
 
 .spotlight {
     padding: 1rem; 
 }
 
+.spotlight3 {
+    display: none; 
+}
+
 header img{
     margin: 1rem; 
-    height: 100px; 
-    width: 150px; 
+    height: 70px; 
+    width: 100px; 
 }
 
 #facebook, #twitter {
-    height: 60px; 
-    width: 60px; 
+    height: 30px; 
+    width: 30px; 
 }
 
 .flex {
@@ -57,13 +66,13 @@ footer {
 }
 
 footer img {
-    height: auto; 
-    width: 150px;
+    height: 70px; 
+    width: 100px;
 }
 
 header, footer {
     font-family: 'Lora', sans-serif; 
-    max-width: 840px;
+    max-width: 540px;
     margin:0 auto;
     padding: 1rem; 
     background-color: lightblue;
@@ -129,15 +138,41 @@ nav a {
     font-size: 5rem;
     border: 0; 
     color: navy; 
-    background-color: lightblue;
+    background-color: lightblue; 
 }
 
 /* Media Query Updates for middle widths */ 
 
 @media screen and (min-width: 840px) {
-
-    body {
-        width: 900px; 
+    header, footer, main {
+        max-width: 840px;
+    }
+    #content {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        row-gap: 0.5rem;
+        column-gap: 0.5rem; 
+    }
+    .join {
+        display: grid;
+        grid-column: 1/4; 
+        grid-row: 4; 
+    }
+    .hero {
+        grid-column: 1/4; 
+        grid-row: 1; 
+    }
+    .news {
+        grid-column: 1/4; 
+        grid-row: 2; 
+    }
+    .event {
+        grid-column: 1/4;
+        grid-row: 5; 
+    }
+    .weather {
+        grid-column: 3; 
+        grid-row: 5; 
     }
     nav ul {
         flex-direction: row;
@@ -153,4 +188,87 @@ nav a {
     #ham-menu {
         display: none; 
     }
+
+    .spotlight {
+        display: grid; 
+        grid-template-columns: 1fr 1fr;
+        grid-row: 3;
+        grid-column: 1/4;
+    }
+
+    .spotlight1, .spotlight2 {
+        margin: 0.4rem; 
+    }
+    #footer {
+        display: grid; 
+        grid-template-columns: 1fr 1fr 1fr; 
+        padding: 1rem; 
+        align-items: center;
+    }
+
+    footer img {
+        height: 140px;
+        width: 200px; 
+    }
+} 
+
+@media screen and (min-width: 1100px) {
+    header, footer, main {
+        max-width: 1200px;
+    }
+
+    #content {
+        display: grid; 
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        row-gap: 0.5rem;
+        column-gap: 0.5rem; 
+    }
+
+    .hero {
+        grid-column: 2/4; 
+        grid-row: 1/3; 
+    }
+
+    .event {
+        grid-column: 1; 
+        grid-row: 1;
+    }
+
+    .weather {
+        grid-column: 1; 
+        grid-row: 2; 
+    }
+
+    .join {
+        grid-column: 1; 
+        grid-row: 3; 
+    }
+
+    .news {
+        grid-column: 2/4; 
+        grid-row: 3; 
+    }
+
+    .spotlight {
+        grid-column: 4; 
+        grid-row: 1/4; 
+        align-items: center;
+        padding: 0.4rem; 
+    }
+    .spotlight3 {
+        display: grid; 
+        grid-row: 3; 
+        margin: 0.4rem; 
+        width: 160%; 
+    }
+    .spotlight1 {
+        grid-row: 1;
+        width: 160%; 
+    }
+    .spotlight2 {
+        grid-row: 2; 
+        width: 160%; 
+    }
+    
 }
