--- a/chamber/styles/site.css
+++ b/chamber/styles/site.css
@@ -204,10 +204,9 @@ nav a {
         margin: 0.4rem; 
     }
     #footer {
-        display: grid; 
-        grid-template-columns: 1fr 1fr 1fr; 
-        padding: 1rem; 
+        display: flex; 
         align-items: center;
+        justify-content: space-around;
     }
 
     footer img {
