--- a/chamber/styles/site.css
+++ b/chamber/styles/site.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Mukta', sans-serif;
 }
 
-#font {
+h1 {
     font-family: 'Lora', sans-serif; 
 }
 
@@ -85,6 +85,39 @@ header {
     box-shadow: 5px 10px 8px gray;
 }
 
+#hero {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
+}
+
+.hero {
+    padding: 0;
+    border: none; 
+    position: relative; 
+}
+
+#hero-title {
+    color: black;
+    text-shadow: .25rem .25rem .75rem #333;
+    padding: 1.5rem;
+    position: absolute; 
+    top: 10px; 
+}
+
+#join-us{
+    color: white;
+    border: none; 
+    background-color: #333;
+    padding-right: 2rem; 
+    padding-left: 2rem; 
+    position: absolute;
+    bottom: 50px; 
+    right: 50px; 
+    border-radius: 45px;
+    box-shadow: 1px 1px 10px black;
+}
+
 nav ul {
     display: flex; 
     flex-direction: column; 
@@ -108,6 +141,7 @@ nav a {
     margin: 1rem; 
     text-decoration: none;
     color: black; 
+    font-size: 1.5rem;
 }
 
 .active {
@@ -175,8 +209,24 @@ nav a {
     }
     .join {
         display: grid;
+        position: relative; 
         grid-column: 1/4; 
         grid-row: 4; 
+        background-color: #647C90;
+    }
+    #join-banner {
+        color: white;
+        border: none; 
+        background-color: #333;
+        padding-right: 2rem; 
+        padding-left: 2rem; 
+        position: absolute;
+        margin: 1rem; 
+        width: 85%; 
+        align-items: center;
+        text-align: center; 
+        border-radius: 45px;
+        box-shadow: 1px 1px 10px black;
     }
     .hero {
         grid-column: 1/4; 
@@ -219,7 +269,7 @@ nav a {
 
 @media screen and (min-width: 1100px) {
     header, footer, main {
-        max-width: 1200px;
+        max-width: 1500px;
     }
 
     nav ul {
@@ -235,6 +285,9 @@ nav a {
 
     #ham-menu {
         display: none; 
+    }
+    #join-banner {
+        width: 70%; 
     }
 
     #content {
