--- a/chamber/styles/site.css
+++ b/chamber/styles/site.css
@@ -187,7 +187,7 @@ nav a {
 }
 
 #meet-greet.active {
-    background-color: aliceblue;
+    background-color: black;
     font-weight: bold;
     text-align: center;
     border-bottom: 1px solid black;
