--- a/final/styles/food.css
+++ b/final/styles/food.css
@@ -104,7 +104,7 @@ a {
     bottom: 40px; 
     background-color: #558564;
     padding: 1rem;
-    width: 500px; 
+    width: 30%; 
     text-align: center; 
     font-family: "Libre Baskerville", sans-serif;
     box-shadow: .25rem .25rem .75rem #333;
@@ -126,7 +126,7 @@ footer {
 
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 868px) {
     .nav-menu {
         position: fixed;
         left: -100%;
@@ -167,12 +167,8 @@ footer {
     .hamburger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
-
-
-}
-
-@media only screen and (max-width: 768px) {
-    #heromessage {
+    #heromessage, #order {
         font-size: .7rem;
     }
 }
+
