--- a/final/styles/food.css
+++ b/final/styles/food.css
@@ -117,6 +117,7 @@ a {
     grid-template-columns: 1fr 3fr 1fr; 
     margin: 1rem;
     background-color: rgb(244, 243, 234);
+    align-items: center;
 }
 
 #fruitsection {
@@ -126,7 +127,7 @@ a {
 }
 
 #image {
-    width: 80%; 
+    width: 90%; 
 }
 
 #fruitq{
@@ -141,7 +142,9 @@ a {
     padding: 1rem;
 }
 
-
+#count {
+    text-align: center;
+}
 
 #explain {
     display: grid;
@@ -152,6 +155,14 @@ a {
     margin: .5rem;
 }
 
+#hidden {
+    display: grid;
+    color: rgb(244, 243, 234); 
+    background-color: #494949;
+    padding: 1rem;
+    font-family: "Mukta", sans-serif; 
+    margin: .5rem;
+}
 
 #cali {
     position: relative; 
@@ -211,8 +222,17 @@ footer {
     .hamburger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
-    #heromessage, #order, #explain, #fruitq {
+    #heromessage, #order, #explain, #fruitq, #count {
         font-size: .7rem;
     }
+}
+@media only screen and (max-width: 800px) {
+    #heromessage, #order, #explain, #fruitq, #count {
+    font-size: .4rem;
+    } 
+    #hidden {
+        display: none;
+    }
+
 }
 
