--- a/final/styles/food.css
+++ b/final/styles/food.css
@@ -139,7 +139,7 @@ a {
     background-color: rgb(116, 58, 77);
     color: white; 
     font-family: "Mukta", sans-serif;
-    padding: 1rem;
+    padding: 2rem;
     box-shadow: -.25rem -.25rem .75rem #333;
 }
 
@@ -151,18 +151,10 @@ a {
     display: grid;
     color: rgb(244, 243, 234); 
     background-color: #494949;
-    padding: 1rem;
+    padding: 2.5rem;
     font-family: "Mukta", sans-serif; 
-    margin: .5rem; 
-}
-
-#hidden {
-    display: grid;
-    color: rgb(244, 243, 234); 
-    background-color: #494949;
-    padding: 1rem;
-    font-family: "Mukta", sans-serif; 
-    margin: .5rem; 
+    margin: .5rem;
+    text-align: center; 
 }
 
 .freshbutton {
@@ -170,7 +162,7 @@ a {
     text-align: center;
     padding: .002rem; 
     color: #000000;
-    margin: .4rem; 
+    margin: 1rem; 
     border-radius: 30px;
 }
 
@@ -241,17 +233,15 @@ footer {
     .hamburger.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
-    #heromessage, #order, #explain, #fruitq, #count, #hidden {
+    #heromessage, #order, .freshbutton {
         font-size: .7rem;
     }
-}
-@media only screen and (max-width: 900px) {
-    #heromessage, #order {
-    font-size: .4rem;
-    } 
-    #hidden {
-        display: none;
+    #freshindex {
+        display: block;
     }
-
 }
+
+@media only screen and (max-width: 800px) {
+}
+
 
