--- a/final/styles/food.css
+++ b/final/styles/food.css
@@ -128,6 +128,7 @@ a {
     font-family: "Mukta", sans-serif;
     padding: 2rem;
     box-shadow: -.25rem -.25rem .75rem #333;
+
 }
 
 #count {
@@ -188,8 +189,12 @@ footer {
     width: 50%;
     font-family: "Libre Baskerville", sans-serif;
     box-shadow: .25rem .25rem .55rem #333;
-    font-size: 1.5rem;
 
+}
+
+#contactinfo {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -253,6 +258,11 @@ footer {
     #location {
         font-size: .6rem;
     }
+
+    #fruitq {
+        width: 60%; 
+    }
+    
 }
 
 
