--- a/final/styles/food.css
+++ b/final/styles/food.css
@@ -76,12 +76,13 @@ a {
     font-family: "Libre Baskerville", sans-serif; 
 }
 
-#hero {
+.hero {
     position: relative;
 }
 
-#hero img {
+.hero img {
     width: 100%; 
+    opacity: 90%;
 }
 
 #heromessage {
@@ -121,7 +122,7 @@ a {
     right: 0px; 
     width: 40%; 
     margin: 0px; 
-    background-color: rgb(116, 58, 77);
+    background-color: rgb(89, 57, 63);
     color: white; 
     font-family: "Mukta", sans-serif;
     padding: 2rem;
@@ -193,7 +194,77 @@ footer {
 #contactinfo {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    background-color: rgb(89, 57, 63);
+    color: white; 
+    text-align: center;
+    padding: 1rem; 
+    font-family: "Libre Baskerville", sans-serif;
 }
+
+#contactinfo a {
+    text-decoration: none;
+    color: white; 
+}
+
+#aboutbutton {
+    padding: 1rem; 
+}
+
+#aboutbutton a {
+    color: black; 
+}
+
+#facebook, #twitter {
+    width: 10%; 
+    margin: 1rem; 
+}
+
+#abouttitle {
+    position: absolute; 
+    top: 40px; 
+    color: #795657; 
+    font-family: "Libre Baskerville", sans-serif;
+    background-color: rgb(244, 243, 234);
+    padding: 1.5rem; 
+    margin: 2rem; 
+}
+
+.form{
+    font-family: "Libre Baskerville", sans-serif;
+    padding: 1rem;
+    background-color: rgb(244, 243, 234);
+    align-items: center;
+    border: 1px dotted black;
+    max-width: 50%;
+    position: absolute; 
+    top: 110px; 
+    left: 5rem; 
+}
+
+#form {
+    font-family: "Libre Baskerville", sans-serif;
+    padding: 1rem;
+    background-color: rgb(244, 243, 234);
+    align-items: center;
+    border: 1px dotted black;
+    max-width: 50%;
+    position: absolute; 
+    top: 10px; 
+    left: 5rem; 
+}
+
+.form p {
+    line-height: 2rem; 
+}
+
+#submit {
+    padding: 1rem; 
+    border-radius: 10px;
+    border: none;
+    color: white; 
+    background-color: rgb(89, 57, 63);
+}
+
 
 @media only screen and (max-width: 1200px) {
     .nav-menu {
@@ -253,18 +324,29 @@ footer {
 }
 
 @media only screen and (max-width: 800px) {
-    #heromessage, #order, #fruitq, #explain, .freshbutton {
+    #heromessage, #order, #fruitq, #explain, #contactinfo {
         font-size: .6rem;
         padding: .9rem;
     }
 
-    #location {
-        font-size: .6rem;
+    #location, #abouttitle {
+        font-size: .7rem;
         padding: .7rem;
     }
 
     #fruitq {
         width: 75%; 
+    }
+
+    #form {
+        font-size: .6rem;
+    }
+
+    .form {
+        font-size: .6rem;
+        padding: .5rem;
+        line-height: .03rem;
+        top: 70px; 
     }
     
 }
