--- a/final/styles/food.css
+++ b/final/styles/food.css
@@ -293,15 +293,31 @@ color: rgb(204, 204, 204);
     margin: 1rem; 
 }
 
-#thankyou {
+.thankyou {
     font-family: "Mukta", sans-serif;
     margin: 2rem; 
 
 }
 
-#thankyou h1 {
+.thankyou h1 {
     font-family: "Libre Baskerville", sans-serif;
     text-align: center;
+}
+
+#infobutton a {
+    font-family: "Libre Baskerville", sans-serif;
+    color: black; 
+    text-decoration: none;
+    padding: 1rem; 
+    border: 1px solid black; 
+}
+
+#infobutton {
+    margin: 2rem; 
+}
+
+#infobutton a:hover {
+    color:rgb(89, 57, 63); 
 }
 
 #weather-icon {
